--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./style.css">
     <title>Web Developer: Sarah Gormley</title>
 </head>
-<body>
+
+<body> 
     <header>
        <nav>
            <ul>
@@ -30,29 +31,44 @@
             <h1>Sarah Gormley</h1> 
             <img class="profile-pic" src="./Images/79004742_10217969255557764_2304786571812929536_n.jpeg" alt="Profile Pic">
         </div>
-        <section id="about-me"> 
+        <section id="about-me" class="vl"> 
             <h2 class="title">About Me</h2>
-            <p class="description">Hello! My name is Sarah, and I am an aspiring Web Developer. My interest in web development stems from trying to edit Tumblr themes back in 2013. Without knowing it at the time, I was slowly gaining a knowledge of HTML and CSS, changing elements to play with the layout and design of my Tumblr blog! Fast forward to today, I am studying to become a Web Developer through University of Adelaide's Coding Bootcamp. My main goal is to create user accessible, stylish and functional web pages to ensure clients have the best digital experience possible.  My current knowledge base includes: HTML, CSS </p>
+            <p class="description">Hello! My name is Sarah, and I am an aspiring Web Developer. <br>
+                 My interest in web development stems from trying to edit Tumblr themes back in 2013. Without knowing it at the time, I was slowly gaining a knowledge of HTML and CSS, changing elements to play with the layout and design of my Tumblr blog! <br> Fast forward to today, I am studying to become a Web Developer through University of Adelaide's Coding Bootcamp. My main goal is to create user accessible, stylish and functional web pages to ensure clients have the best digital experience possible.  My current knowledge base includes: HTML, CSS </p>
         </section>
-       <section id="work">
+       <section id="work" class="vl">
            <h2 class="title">Work</h2> 
+           <div>
            <h3 class="description">Horiseon Code Refactor</h3>
+           <img class="work-image" src="./Images/refactor.jpeg">
+        </div>
+        <div>
            <h3 class="description">Surf Report</h3>
-           <p class="description"> kfjhvlefkgjkldfsjgdkjfdkjh</p>
+           <img class="work-image" src="./Images/ocean.jpeg">
+        </div>
+        <div>
            <h3 class="description">Calculator</h3>
+           <img class="work-image" src="./Images/calc.jpeg">
+        </div>
+        <div>
            <h3 class="description">LED Wall</h3>
+           <img class="work-image" src="./Images/ledwall.png">
+         </div>
+         <div>
            <h3 class="description">Pastel Puzzles</h3>
+           <img class="work-image" src="./Images/puzzle.jpeg">
+        </div>
        </section>
-       <section id="contact">
+       <section id="contact" class="vl">
             <h2 class="title">Contact</h2>
-            <ul class="description">
+            <ul class= socials>
                 <li>0458350393</li>
-                <li>sarah.gormley39@gmail.com</li>
-                <li>https://github.com/sarahgormley</li>
-                <li>https://www.linkedin.com/in/sarah-gormley-511451231/</li>
+                <li><a href="mailto:sarah.gormley39@gmail.com"></a>Email</li>
+                <li><a href="https://github.com/sarahgormley">GitHub</a></li>
+               <li><a href="https://www.linkedin.com/in/sarah-gormley-511451231/">LinkedIn</a></li>
             </ul>
         </section>
-        <section id="resume">
+        <section id="resume"class="vl">
            <h2 class="title">Resume</h2>
         </section>
     </main>
