Image overlay with text added. Classes created for same

--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
         </section>
        <section id="work" class="vl">
            <h2 class="title">Work</h2> 
-           <div>
-           <h3 class="description">Horiseon Code Refactor</h3>
+        <div class="container">
+            <div class="bottom-left">Horiseon Code Refactor</div>
            <img class="work-image" src="./Images/refactor.jpeg">
         </div>
-        <div>
-           <h3 class="description">Surf Report</h3>
+        <div class="container">
+            <div class="bottom-left">Surf Report</div>
            <img class="work-image" src="./Images/ocean.jpeg">
         </div>
-        <div>
-           <h3 class="description">Calculator</h3>
+        <div class="container">
+            <div class="bottom-left">Calculator</div>
            <img class="work-image" src="./Images/calc.jpeg">
         </div>
-        <div>
-           <h3 class="description">LED Wall</h3>
+        <div class="container">
+            <div class="bottom-left">LED Wall</div>
            <img class="work-image" src="./Images/ledwall.png">
          </div>
-         <div>
-           <h3 class="description">Pastel Puzzles</h3>
+         <div class="container">
+             <div class="bottom-left">Pastel Puzzle</div>
            <img class="work-image" src="./Images/puzzle.jpeg">
         </div>
        </section>
