Fixing links & background color. Resizing images

--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                <li>
                    <a href="#contact">Contact</a>
             </li>
-               <li>
-                <a href="#resume">Resume</a>
-                </li>
+        
            </ul>
        </nav>
        
@@ -40,36 +38,36 @@
            <h2 class="title">Work</h2> 
         <div class="container">
             <div class="bottom-left">Horiseon Code Refactor</div>
-           <img class="work-image" src="./Images/refactor.jpeg">
+           <img id="refactor" class="work image" src="./Images/refactor.jpeg" alt="Refactor">
         </div>
         <div class="container">
             <div class="bottom-left">Surf Report</div>
-           <img class="work-image" src="./Images/ocean.jpeg">
+           <img class="work-image" src="./Images/ocean.jpeg" alt="Ocean">
         </div>
         <div class="container">
             <div class="bottom-left">Calculator</div>
-           <img class="work-image" src="./Images/calc.jpeg">
+           <img class="work-image" src="./Images/calc.jpeg" alt="Calculator">
         </div>
         <div class="container">
             <div class="bottom-left">LED Wall</div>
-           <img class="work-image" src="./Images/ledwall.png">
+           <img class="work-image" src="./Images/ledwall.png" alt="LEDWall">
          </div>
          <div class="container">
              <div class="bottom-left">Pastel Puzzle</div>
-           <img class="work-image" src="./Images/puzzle.jpeg">
+           <img class="work-image" src="./Images/puzzle.jpeg" alt="Puzzle">
         </div>
+        <br>
+        <br></nbr>
        </section>
-       <section id="contact" class="vl">
+       <section id= "contact" class="vl">
             <h2 class="title">Contact</h2>
             <ul class= socials>
-                <li>0458350393</li>
-                <li><a href="mailto:sarah.gormley39@gmail.com"></a>Email</li>
+                <li><a href="tel:+0458350393">0458350393</a</li>
+                <li><a href="mailto:sarah.gormley39@gmail,com?Subject=Hello" target="_top">sarah.gormley39@gmail.com</a>
+                </a></li>
                 <li><a href="https://github.com/sarahgormley">GitHub</a></li>
                <li><a href="https://www.linkedin.com/in/sarah-gormley-511451231/">LinkedIn</a></li>
             </ul>
-        </section>
-        <section id="resume"class="vl">
-           <h2 class="title">Resume</h2>
         </section>
     </main>
 </body>
