trying to align flexboxes

--- a/index.html
+++ b/index.html
@@ -23,54 +23,53 @@
 
             </ul>
         </nav>
-
     </header>
     <main>
         <aside class="card">
             <h1>Sarah Gormley</h1>
-            <img class="profile-pic" src="./Images/79004742_10217969255557764_2304786571812929536_n.jpeg" alt="Profile Pic">
+            <img src="./Images/79004742_10217969255557764_2304786571812929536_n.jpeg" alt="Profile Pic">
         </aside>
-        <section id="about-me" class="vl">
-            <h2 class="title">About Me</h2>
-            <div class="transbox">
-                <p class="description">Hello! My name is Sarah, and I am an aspiring Web Developer. <br> <br> My interest in web development stems from trying to modify my Tumblr theme back in 2013. Without knowing it at the time, I was slowly gaining a knowledge of HTML and
+        <section class="vl">
+            <h2>About Me</h2>
+            <div>
+                <p id="description"> Hello! My name is Sarah, and I am an aspiring Web Developer. <br> <br> My interest in web development stems from trying to modify my Tumblr theme back in 2013. Without knowing it at the time, I was slowly gaining a knowledge of HTML and
                     CSS - changing elements to play with the layout and design of my Tumblr blog! <br> Fast forward to today, I am studying to become a Web Developer through University of Adelaide's Coding Bootcamp. My main goal is to create user accessible,
                     stylish and functional web pages to ensure clients have the best digital experience possible. My current knowledge base includes: HTML & CSS. </p>
             </div>
         </section>
 
-        <main id="work" class="vl">
-            <h2 class="title">Work</h2>
+        <main id="work-container" class="vl">
+            <h2>Work</h2>
             <div id="refactor">
                 <a href="https://github.com/sarahgormley/Horiseon-Code-Refactor">
-                    <div class="bottom-left-refactor">Horiseon Code Refactor</div>
+                    <div class="bottom-left">Horiseon Code Refactor</div>
                     <img class="lg-img" src="./Images/refactor.jpeg" alt="Refactor"></a>
             </div>
-            <div class="container">
+            <div id="work-flex" class="container">
                 <a href="https://www.surfline.com/">
                     <div class="bottom-left">Surf Report</div>
-                    <img class="image" src="./Images/ocean.jpeg" alt="Ocean"></a>
+                    <img src="./Images/ocean.jpeg" alt="Ocean"></a>
             </div>
-            <div class="container">
+            <div id="work-flex" class="container">
                 <a href="https://www.google.com/search?q=google+calculator&rlz=1C5CHFA_enAU993AU993&oq=google+calc&aqs=chrome.0.69i59j69i57j0i512l5j69i60.2264j0j9&sourceid=chrome&ie=UTF-8">
                     <div class="bottom-left">Calculator</div>
-                    <img class="image" src="./Images/calc.jpeg" alt="Calculator"></a>
+                    <img src="./Images/calc.jpeg" alt="Calculator"></a>
             </div>
-            <div class="container">
+            <div id="work-flex" class="container">
                 <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.matrixvisual.com%2Fwp-content%2Fuploads%2F2016%2F07%2FLED-Wall-Benefits.png&imgrefurl=https%3A%2F%2Fwww.matrixvisual.com%2Fbenefits-led-walls-versus-projection-displays%2F&tbnid=nJPHI6ihYhiQCM&vet=12ahUKEwik2fOhtcz2AhUNRmwGHZ99BeEQMygcegUIARCeAg..i&docid=EqFUGKX_zcovjM&w=977&h=653&q=led%20wall&ved=2ahUKEwik2fOhtcz2AhUNRmwGHZ99BeEQMygcegUIARCeAg">
                     <div class="bottom-left">LED Wall</div>
-                    <img class="image" src="./Images/ledwall.png" alt="LEDWall"></a>
+                    <img src="./Images/ledwall.png" alt="LEDWall"></a>
             </div>
-            <div class="container">
+            <div id="work-flex" class="container">
                 <a href="https://www.jigsawplanet.com/">
                     <div class="bottom-left">Pastel Puzzle</div>
-                    <img class="image" src="./Images/puzzle.jpeg" alt="Puzzle"></a>
+                    <img src="./Images/puzzle.jpeg" alt="Puzzle"></a>
             </div>
             <br>
-            <br></nbr>
+            <br>
         </main>
-        <section id="contact" class="vl">
-            <h2 class="title">Contact</h2>
+        <section class="vl">
+            <h2>Contact</h2>
             <ul class=socials>
                 <li><a href="tel:+0458350393">0458350393</a</li>
                 <li><a href="mailto:sarah.gormley39@gmail,com?Subject=Hello" target="_top">sarah.gormley39@gmail.com</a>
