Finishing touches. Completed readme. Links all work. Webpage cleaned up

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#about-me">About</a>
+                    <a href="#description">About</a>
                 </li>
                 <li>
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#socials">Contact</a>
                 </li>
 
             </ul>
@@ -38,31 +38,30 @@
             </div>
         </section>
 
-        <main id="work-container" class="vl">
-            <h2>Work</h2>
+        <main id="work" class="vl">
             <div id="refactor">
                 <a href="https://github.com/sarahgormley/Horiseon-Code-Refactor">
-                    <div class="bottom-left">Horiseon Code Refactor</div>
+                    <div class="titles">Horiseon Code Refactor</div>
                     <img class="lg-img" src="./Images/refactor.jpeg" alt="Refactor"></a>
             </div>
-            <div id="work-flex" class="container">
+            <div class="container">
                 <a href="https://www.surfline.com/">
-                    <div class="bottom-left">Surf Report</div>
+                    <div class="titles">Surf Report</div>
                     <img src="./Images/ocean.jpeg" alt="Ocean"></a>
             </div>
-            <div id="work-flex" class="container">
+            <div class="container">
                 <a href="https://www.google.com/search?q=google+calculator&rlz=1C5CHFA_enAU993AU993&oq=google+calc&aqs=chrome.0.69i59j69i57j0i512l5j69i60.2264j0j9&sourceid=chrome&ie=UTF-8">
-                    <div class="bottom-left">Calculator</div>
+                    <div class="titles">Calculator</div>
                     <img src="./Images/calc.jpeg" alt="Calculator"></a>
             </div>
-            <div id="work-flex" class="container">
+            <div class="container">
                 <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.matrixvisual.com%2Fwp-content%2Fuploads%2F2016%2F07%2FLED-Wall-Benefits.png&imgrefurl=https%3A%2F%2Fwww.matrixvisual.com%2Fbenefits-led-walls-versus-projection-displays%2F&tbnid=nJPHI6ihYhiQCM&vet=12ahUKEwik2fOhtcz2AhUNRmwGHZ99BeEQMygcegUIARCeAg..i&docid=EqFUGKX_zcovjM&w=977&h=653&q=led%20wall&ved=2ahUKEwik2fOhtcz2AhUNRmwGHZ99BeEQMygcegUIARCeAg">
-                    <div class="bottom-left">LED Wall</div>
+                    <div class="titles">LED Wall</div>
                     <img src="./Images/ledwall.png" alt="LEDWall"></a>
             </div>
-            <div id="work-flex" class="container">
+            <div class="container">
                 <a href="https://www.jigsawplanet.com/">
-                    <div class="bottom-left">Pastel Puzzle</div>
+                    <div class="titles">Pastel Puzzle</div>
                     <img src="./Images/puzzle.jpeg" alt="Puzzle"></a>
             </div>
             <br>
@@ -70,7 +69,7 @@
         </main>
         <section class="vl">
             <h2>Contact</h2>
-            <ul class=socials>
+            <ul id=socials>
                 <li><a href="tel:+0458350393">0458350393</a</li>
                 <li><a href="mailto:sarah.gormley39@gmail,com?Subject=Hello" target="_top">sarah.gormley39@gmail.com</a>
                     </a>
