adding recent projects

--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
         <section class="vl">
             <h2>About Me</h2>
             <div>
-                <p id="description"> Hello! My name is Sarah, and I am an aspiring Web Developer. <br> <br> My interest in web development stems from trying to modify my Tumblr theme back in 2013. Without knowing it at the time, I was slowly gaining a knowledge of HTML and
-                    CSS - changing elements to play with the layout and design of my Tumblr blog! <br> Fast forward to today, I am studying to become a Web Developer through University of Adelaide's Coding Bootcamp. My main goal is to create user accessible,
-                    stylish and functional web pages to ensure clients have the best digital experience possible. My current knowledge base includes: HTML & CSS. </p>
+                <p id="description"> Welcome! My name is Sarah, and I am an aspiring Web Developer. <br> <br> My interest in web development stems from trying to modify my Tumblr theme back in 2013. Without knowing it at the time, I was slowly gaining a knowledge of HTML
+                    and CSS - changing elements to play with the layout and design of my Tumblr blog! <br> Fast forward to today, I am studying to become a Web Developer through University of Adelaide's Coding Bootcamp. My main goal is to create user
+                    accessible, stylish and functional web pages to ensure clients have the best digital experience possible. My current knowledge base includes: HTML & CSS. </p>
             </div>
         </section>
 
         <main id="work" class="vl">
             <div id="refactor">
-                <a href="https://github.com/sarahgormley/Horiseon-Code-Refactor">
-                    <div class="titles">Horiseon Code Refactor</div>
-                    <img class="lg-img" src="./Images/refactor.jpeg" alt="Refactor"></a>
+                <a href="https://github.com/sarahgormley/hollyview">
+                    <div class="titles">HollyView</div>
+                    <img class="lg-img" src="./Images/hollyview.jpeg" alt="HollyViewImg"></a>
             </div>
             <div class="container">
-                <a href="https://www.surfline.com/">
-                    <div class="titles">Surf Report</div>
-                    <img src="./Images/ocean.jpeg" alt="Ocean"></a>
+                <a href="https://github.com/sarahgormley/Work-Day-Scheduler">
+                    <div class="titles">Work Day Scheduler </div>
+                    <img src="./Images/scheduler.jpeg" alt="schedule"></a>
             </div>
             <div class="container">
-                <a href="https://www.google.com/search?q=google+calculator&rlz=1C5CHFA_enAU993AU993&oq=google+calc&aqs=chrome.0.69i59j69i57j0i512l5j69i60.2264j0j9&sourceid=chrome&ie=UTF-8">
-                    <div class="titles">Calculator</div>
-                    <img src="./Images/calc.jpeg" alt="Calculator"></a>
+                <a href="https://github.com/sarahgormley/Sarahs-Code-Quiz">
+                    <div class="titles">Code Quiz</div>
+                    <img src="./Images/codequiz.jpeg" alt="Code Quiz"></a>
             </div>
             <div class="container">
-                <a href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.matrixvisual.com%2Fwp-content%2Fuploads%2F2016%2F07%2FLED-Wall-Benefits.png&imgrefurl=https%3A%2F%2Fwww.matrixvisual.com%2Fbenefits-led-walls-versus-projection-displays%2F&tbnid=nJPHI6ihYhiQCM&vet=12ahUKEwik2fOhtcz2AhUNRmwGHZ99BeEQMygcegUIARCeAg..i&docid=EqFUGKX_zcovjM&w=977&h=653&q=led%20wall&ved=2ahUKEwik2fOhtcz2AhUNRmwGHZ99BeEQMygcegUIARCeAg">
-                    <div class="titles">LED Wall</div>
-                    <img src="./Images/ledwall.png" alt="LEDWall"></a>
+                <a href="https://github.com/sarahgormley/sarahs-password-generator">
+                    <div class="titles">Password Generator</div>
+                    <img src="./Images/pword.png" alt="Password"></a>
             </div>
             <div class="container">
-                <a href="https://www.jigsawplanet.com/">
-                    <div class="titles">Pastel Puzzle</div>
-                    <img src="./Images/puzzle.jpeg" alt="Puzzle"></a>
+                <a href="https://github.com/sarahgormley/weather-dashboard">
+                    <div class="titles">Weather Dashboard</div>
+                    <img src="./Images/weatherdashboard.jpg" alt="Weather"></a>
             </div>
             <br>
             <br>
