added resume PDF

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
+                    <a href="./Images/webdevresume.pdf">Resume</a>
+                </li>
+                <li>
                     <a href="#socials">Contact</a>
                 </li>
 
