--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#work">Work</a>
                 </li>
                 <li>
-                    <a href="./Images/webdevresume.pdf">Resume</a>
+                    <a href="./Images/sgormleyresumepdf.pdf">Resume</a>
                 </li>
                 <li>
                     <a href="#socials">Contact</a>
